<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".KalkulatorBangunRuang">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="8pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kubusDesc" />

    <EditText
        android:id="@+id/edtSisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/inputSisi"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <Button
        android:id="@+id/btnHitung"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hitung" />

    <TextView
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasilVolume" />

    <TextView
        android:id="@+id/tvVolume"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasilLuas" />

    <TextView
        android:id="@+id/tvLuas"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>