<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".CetakNama">

    <TextView
        android:id="@+id/tv_halo"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/halo"
        android:gravity="center_horizontal"
        android:textSize="8pt"
        />

    <EditText
        android:id="@+id/edt_name"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/nama"
        />

    <EditText
        android:id="@+id/edt_nim"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="number"
        android:hint="@string/nim"
        />

    <EditText
        android:id="@+id/edt_prodi"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/prodi"
        />

    <Button
        android:id="@+id/btn_halo"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAlignment="center"
        />

</LinearLayout>